--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </head>
     <body>
         <h1>Oleg Mironov</h1>
-        <img src="my_pic.jpg" alt="Oleg's picture">
+        <img src="my_pic.JPG" alt="Oleg's picture">
         <p>
                 I have a strong believe that no matter how difficult a task seems to be, slicing it into small pieces is a key to a successful outcome. My name is Oleg Mironov and I am a professional data analyst. Having bachelor degree in software development helped me start my career as IT Engineer. I worked with financial institutions, law firms, housing agencies and other industries in Houston area. Desire to grow professionally pushed me to learn new trending skills: coding with Python and JavaScript, data visualization, machine learning, API interactions and so on. I am detail-oriented, organized and initiative team player who has strong problem-solving skills and ability to work under pressure of any circumstances.  
 
