--- a/index.html
+++ b/index.html
@@ -25,6 +25,15 @@
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
+        <h1 align = "middle">Crime Corelations</h1>
+        <br><br>
+        <h2 align = "middle">The purpase of this project is to find out if natural desisters have the affect n lavel of crime in Galverston, Texas and Louisa, Verginia.</h2>
+        <br><br><br>
+        <div style="display: flex; justify-content: center;">
+        <img src="TX_graph.png" align = "middle">
+        <br><br><br><br><br>
+        <img src="VA_graph.png">
+        </div>
         
         <script src="" async defer></script>
     </body>
