fixed picture with gradient

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <title>Oleg Mironov</title>
 </head>
 
-<body style="background-color: rgb(185, 184, 184)">
+<body style="background-color: rgb(137, 137, 137)">
 
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">Oleg Mironov</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
@@ -24,15 +24,15 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <!-- <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a> -->
+                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <!-- <a class="nav-link" href="#">Link</a> -->
+                    <a class="nav-link" href="#">Link</a>
                 </li>
                 <li class="nav-item dropdown">
-                    <!-- <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Dropdown
-                      </a> -->
+                      </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="#">Action</a>
                         <a class="dropdown-item" href="#">Another action</a>
@@ -40,18 +40,21 @@
                         <a class="dropdown-item" href="#">Something else here</a>
                     </div>
                 </li>
-                <!-- <li class="nav-item">
+                <li class="nav-item">
                       <a class="nav-link disabled" href="#">Disabled</a>
-                    </li> -->
+                    </li>
             </ul>
 
         </div>
-    </nav>
+    </nav> -->
 
 
-    <div class="container">
 
-    </div>
+    <img src="page_pic10.jpg" alt="my photo" width=50%>
+
+
+    <!-- <div class="container">
+    </div> -->
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
