--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" style="height: 100%;">
 
 <head>
     <!-- Required meta tags -->
@@ -12,7 +12,7 @@
     <title>Oleg Mironov</title>
 </head>
 
-<body style="background-color: rgb(137, 137, 137)">
+<body style="background-color: rgb(137, 137, 137); height: 100%;">
 
 
     <!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -49,8 +49,13 @@
     </nav> -->
 
 
+    <div style="height: 100%;">
 
-    <img src="page_pic10.jpg" alt="my photo" width=50%>
+        <img src="page_pic10.jpg" alt="my photo" style="height: 100%;"> my bio statement
+
+
+    </div>
+
 
 
     <!-- <div class="container">
