added css and position brand statement

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" type="text/css" href="myCSS.css">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -51,7 +52,14 @@
 
     <div style="height: 100%;">
 
-        <img src="page_pic10.jpg" alt="my photo" style="height: 100%;"> my bio statement
+        <img src="page_pic10.jpg" alt="my photo" style="height: 100%;">
+
+        <div class="absolutePosition">
+            Having a bachelor degree in software development helped me start my career as IT Engineer. I worked with financial institutions, law firms, housing agencies and other industries in Houston area. Desire to grow professionally pushed me to learn new trending
+            skills: coding with Python and JavaScript, data visualization, machine learning, API interactions and so on. Now I am a professional data analyst. Last year I successfully deployed two web sites. People I worked with see me as detail-oriented,
+            organized and initiative team player who has strong problem-solving skills and ability to work under pressure of any circumstances. I always strive to go extra mile to achieve great results and exceed company expectations and these characteristics
+            positions me well to be a part of successful team who sets high standards and dares to dream big.
+        </div>
 
 
     </div>
