issues with picture and gradient display in IE and Edge, created several pictures for referances in different formats

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Oleg Mironov</title>
 </head>
 
-<body style="background-color: rgb(137, 137, 137); height: 100%;">
+<body style=" height: 100%; ">
 
 
     <!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -50,9 +50,9 @@
     </nav> -->
 
 
-    <div style="height: 100%;">
+    <div style="height: 100%; background-color: rgb(115,115,115);">
 
-        <img src="page_pic10.jpg" alt="my photo" style="height: 100%;">
+        <img src="IMG_3560.png" alt="my photo" style="height: 100%;">
 
         <div class="absolutePosition">
             Having a bachelor degree in software development helped me start my career as IT Engineer. I worked with financial institutions, law firms, housing agencies and other industries in Houston area. Desire to grow professionally pushed me to learn new trending
