--- a/index.html
+++ b/index.html
@@ -15,59 +15,64 @@
 
 <body style=" height: 100%; ">
 
-
-    <!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Oleg Mironov</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
-                </button>
-
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Dropdown
-                      </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">Action</a>
-                        <a class="dropdown-item" href="#">Another action</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Something else here</a>
-                    </div>
-                </li>
-                <li class="nav-item">
-                      <a class="nav-link disabled" href="#">Disabled</a>
-                    </li>
-            </ul>
-
-        </div>
-    </nav> -->
-
-
     <div style="height: 100%; background-color: rgb(115,115,115);">
+
+
 
         <img src="IMG_3560.png" alt="my photo" style="height: 100%;">
 
-        <div class="absolutePosition">
-            Having a bachelor degree in software development helped me start my career as IT Engineer. I worked with financial institutions, law firms, housing agencies and other industries in Houston area. Desire to grow professionally pushed me to learn new trending
-            skills: coding with Python and JavaScript, data visualization, machine learning, API interactions and so on. Now I am a professional data analyst. Last year I successfully deployed two web sites. People I worked with see me as detail-oriented,
-            organized and initiative team player who has strong problem-solving skills and ability to work under pressure of any circumstances. I always strive to go extra mile to achieve great results and exceed company expectations and these characteristics
-            positions me well to be a part of successful team who sets high standards and dares to dream big.
+
+        <div class="outterContainer">
+
+
+
+            <div class="absolutePosition">
+                Having a bachelor degree in software development helped me start my career as IT Engineer. I worked with financial institutions, law firms, housing agencies and other industries in Houston area. Desire to grow professionally pushed me to learn new trending
+                skills: coding with Python and JavaScript, data visualization, machine learning, API interactions and so on. Now I am a professional data analyst. Last year I successfully deployed two web sites. People I worked with see me as detail-oriented,
+                organized and initiative team player who has strong problem-solving skills and ability to work under pressure of any circumstances. I always strive to go extra mile to achieve great results and exceed company expectations and these characteristics
+                positions me well to be a part of successful team who sets high standards and dares to dream big.
+            </div>
+
+
+
+
+            <div class="absolutePositionLinks">
+
+
+
+
+                <div class="row">
+
+
+                    <div class="col-md-4" style="background-color: teal; text-align: center; padding: 10px; border-radius: 200px;">Download my RESUME
+                    </div>
+
+                    <div class="col-md-4" style="background-color: rgb(50, 53, 228); text-align: center;padding: 10px;border-radius: 200px;">Check out my GITHUB
+                    </div>
+
+                    <div class="col-md-4" style="background-color: rgba(203, 233, 36, 0.336); text-align: center;padding: 10px;border-radius: 200px;">Connect on LINKEDIN
+                    </div>
+
+
+                </div>
+
+
+
+
+
+
+
+
+
+
+
+            </div>
+
         </div>
 
 
     </div>
 
-
-
-    <!-- <div class="container">
-    </div> -->
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
