--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <title>Oleg Mironov</title>
+    <title>Oleg Mironov - Portfolio</title>
 </head>
 
 <body style=" height: 100%; ">
@@ -44,13 +44,18 @@
                 <div class="row">
 
 
-                    <div class="col-md-4" style="background-color: teal; text-align: center; padding: 10px; border-radius: 200px;">Download my RESUME
+                    <div class="col-md-4">
+                        <div class="cellule">
+                            Download my RESUME
+                        </div>
                     </div>
 
-                    <div class="col-md-4" style="background-color: rgb(50, 53, 228); text-align: center;padding: 10px;border-radius: 200px;">Check out my GITHUB
+                    <div class="col-md-4 ">
+                        <div class="cellule">Check out my GITHUB</div>
                     </div>
 
-                    <div class="col-md-4" style="background-color: rgba(203, 233, 36, 0.336); text-align: center;padding: 10px;border-radius: 200px;">Connect on LINKEDIN
+                    <div class="col-md-4 ">
+                        <div class="cellule">Connect on LINKEDIN</div>
                     </div>
 
 
