changed buttons and added links

--- a/index.html
+++ b/index.html
@@ -45,17 +45,24 @@
 
 
                     <div class="col-md-4">
-                        <div class="cellule">
-                            Download my RESUME
-                        </div>
+                        <a href="OlegMironov_Resume.pdf" style="text-decoration:none" download target="_blank">
+                            <div class="cellule">
+                                Download my RESUME
+                            </div>
+                        </a>
+
                     </div>
 
                     <div class="col-md-4 ">
-                        <div class="cellule">Check out my GITHUB</div>
+                        <a href="https://github.com/olegmrnv" style="text-decoration:none" target="_blank">
+                            <div class="cellule">Check out my GITHUB</div>
+                        </a>
                     </div>
 
                     <div class="col-md-4 ">
-                        <div class="cellule">Connect on LINKEDIN</div>
+                        <a href="https://www.linkedin.com/in/oleg-mironov/" style="text-decoration:none" target="_blank">
+                            <div class="cellule">Connect on LINKEDIN</div>
+                        </a>
                     </div>
 
 
