changed picture, started on projects section

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 
 
-        <img src="IMG_3560.png" alt="my photo" style="height: 100%;">
+        <img src="IMG_3560_mid.gif" alt="my photo" style="height: 100%;">
 
 
         <div class="outterContainer">
@@ -65,7 +65,6 @@
                         </a>
                     </div>
 
-
                 </div>
 
 
@@ -77,6 +76,19 @@
 
 
 
+
+            </div>
+
+
+
+
+
+
+            <div class="row">
+
+                <div class="col-md-12">
+                    <h3><br>Featured Projects:</h3>
+                </div>
 
             </div>
 
