added featured projects

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 
 
             <div class="absolutePosition">
-                Having a bachelor degree in software development helped me start my career as IT Engineer. I worked with financial institutions, law firms, housing agencies and other industries in Houston area. Desire to grow professionally pushed me to learn new trending
-                skills: coding with Python and JavaScript, data visualization, machine learning, API interactions and so on. Now I am a professional data analyst. Last year I successfully deployed two web sites. People I worked with see me as detail-oriented,
-                organized and initiative team player who has strong problem-solving skills and ability to work under pressure of any circumstances. I always strive to go extra mile to achieve great results and exceed company expectations and these characteristics
-                positions me well to be a part of successful team who sets high standards and dares to dream big.
+                Hi, I am Oleg Mironov. My bachelor degree in software development started my career as IT Engineer. I helped financial institutions, law firms, housing agencies and other industries in Houston area. Desire to grow professionally pushed me to learn new
+                trending skills: coding with Python and JavaScript, data visualization, machine learning, API interactions and so on. Now I am a professional data analyst. Last year I successfully deployed two web sites. People I worked with see me as
+                detail-oriented, organized and initiative team player who has strong problem-solving skills and ability to work under pressure of any circumstances. I always strive to go extra mile to achieve great results and exceed company expectations
+                and these characteristics positions me well to be a part of successful team who sets high standards and dares to dream big.
             </div>
 
 
@@ -92,6 +92,25 @@
 
             </div>
 
+
+            <div class="row">
+                <div class="col-md-1"></div>
+                <div class="col-md-11">
+                    <strong><a href="https://texas-multi-choropleth.herokuapp.com/" target="_blank" style="text-decoration: none; color:rgb(33, 37, 41);"> Texas Dream </a></strong> - Explore Texas, check out high income areas, low unemployment, best schools
+                    and other factors to select best place to live in this wonderful state.
+                </div>
+
+            </div>
+            <div class="row">
+                <div class="col-md-1"></div>
+                <div class="col-md-11">
+                    <strong><a href="https://olegmrnv.github.io/Dynamic-Correlation/" target="_blank" style="text-decoration: none; color:rgb(33, 37, 41);"> Dynamic Correlation </a></strong> - Scatter plot I build using JavaScript and D3 library. Play
+                    with it and change parameters on axis, plot will change dynamically.
+
+                </div>
+
+            </div>
+
         </div>
 
 
@@ -100,9 +119,9 @@
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script> -->
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script> -->
+    <!-- <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script> -->
 </body>
 
 </html>
