changed floating info to be using bootstrap grid, cleaned code

--- a/index.html
+++ b/index.html
@@ -21,81 +21,90 @@
 
         <img src="IMG_3560_mid.gif" alt="my photo" style="height: 100%;">
 
+        <div class="floatingTable">
+            <div class="row">
+                <!-- left column over the picture -->
+                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-5">
+                </div>
+                <!-- right column with info -->
+                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-7">
 
-        <div class="outterContainer">
-
-
-
-            <div class="absolutePosition">
-                Hi, I am Oleg Mironov. My bachelor degree in software development started my career as IT Engineer. I helped financial institutions, law firms, housing agencies and other industries in Houston area. Desire to grow professionally pushed me to learn new
-                trending skills: coding with Python and JavaScript, data visualization, machine learning, API interactions and so on. Now I am a professional data analyst. Last year I successfully deployed two web sites. People I worked with see me as
-                detail-oriented, organized and initiative team player who has strong problem-solving skills and ability to work under pressure of any circumstances. I always strive to go extra mile to achieve great results and exceed company expectations
-                and these characteristics positions me well to be a part of successful team who sets high standards and dares to dream big.
-            </div>
+                    <div class="outterContainer">
 
 
 
+                        <div class="absolutePosition">
+                            Hi, I am Oleg Mironov. My bachelor degree in software development started my career as IT Engineer. I helped financial institutions, law firms, housing agencies and other industries in Houston area. Desire to grow professionally pushed me to learn new
+                            trending skills: coding with Python and JavaScript, data visualization, machine learning, API interactions and so on. Now I am a professional data analyst. Last year I successfully deployed two web sites. People I worked with
+                            see me as detail-oriented, organized and initiative team player who has strong problem-solving skills and ability to work under pressure of any circumstances. I always strive to go extra mile to achieve great results and exceed
+                            company expectations and these characteristics positions me well to be a part of successful team who sets high standards and dares to dream big.
+                        </div>
 
-            <div class="absolutePositionLinks">
+
+
+
+                        <div class="absolutePositionLinks">
 
 
 
 
-                <div class="row">
+                            <div class="row">
 
 
-                    <div class="col-md-4">
-                        <a href="OlegMironov_Resume.pdf" style="text-decoration:none" download target="_blank">
-                            <div class="cellule">
-                                Download my RESUME
+                                <div class="col-xs-12 col-sm-12 col-md-4">
+                                    <a href="OlegMironov_Resume.pdf" style="text-decoration:none" download target="_blank">
+                                        <div class="cellule">
+                                            Download my RESUME
+                                        </div>
+                                    </a>
+
+                                </div>
+
+                                <div class="col-xs-12 col-sm-12 col-md-4 ">
+                                    <a href="https://github.com/olegmrnv" style="text-decoration:none" target="_blank">
+                                        <div class="cellule">Check out my GITHUB</div>
+                                    </a>
+                                </div>
+
+                                <div class="col-xs-12 col-sm-12 col-md-4 ">
+                                    <a href="https://www.linkedin.com/in/oleg-mironov/" style="text-decoration:none" target="_blank">
+                                        <div class="cellule">Connect on LINKEDIN</div>
+                                    </a>
+                                </div>
+
                             </div>
-                        </a>
 
+                        </div>
+
+                        <div class="row">
+
+                            <div class="col-md-12">
+                                <h3><br>Featured Projects:</h3>
+                            </div>
+
+                        </div>
+
+
+                        <div class="row">
+                            <div class="col-md-1"></div>
+                            <div class="col-md-11">
+                                <strong><a href="https://texas-multi-choropleth.herokuapp.com/" target="_blank" style="text-decoration: none; color:rgb(33, 37, 41);"> Texas Dream </a></strong> - Explore Texas, check out high income areas, low unemployment,
+                                best schools and other factors to select best place to live in this wonderful state.
+                            </div>
+
+                        </div>
+                        <div class="row">
+                            <div class="col-md-1"></div>
+                            <div class="col-md-11">
+                                <strong><a href="https://olegmrnv.github.io/Dynamic-Correlation/" target="_blank" style="text-decoration: none; color:rgb(33, 37, 41);"> Dynamic Correlation </a></strong> - Scatter plot I build using JavaScript and D3 library.
+                                Play with it and change parameters on axis, plot will change dynamically.
+
+                            </div>
+
+                        </div>
                     </div>
-
-                    <div class="col-md-4 ">
-                        <a href="https://github.com/olegmrnv" style="text-decoration:none" target="_blank">
-                            <div class="cellule">Check out my GITHUB</div>
-                        </a>
-                    </div>
-
-                    <div class="col-md-4 ">
-                        <a href="https://www.linkedin.com/in/oleg-mironov/" style="text-decoration:none" target="_blank">
-                            <div class="cellule">Connect on LINKEDIN</div>
-                        </a>
-                    </div>
-
                 </div>
-
             </div>
-
-            <div class="row">
-
-                <div class="col-md-12">
-                    <h3><br>Featured Projects:</h3>
-                </div>
-
-            </div>
-
-
-            <div class="row">
-                <div class="col-md-1"></div>
-                <div class="col-md-11">
-                    <strong><a href="https://texas-multi-choropleth.herokuapp.com/" target="_blank" style="text-decoration: none; color:rgb(33, 37, 41);"> Texas Dream </a></strong> - Explore Texas, check out high income areas, low unemployment, best schools
-                    and other factors to select best place to live in this wonderful state.
-                </div>
-
-            </div>
-            <div class="row">
-                <div class="col-md-1"></div>
-                <div class="col-md-11">
-                    <strong><a href="https://olegmrnv.github.io/Dynamic-Correlation/" target="_blank" style="text-decoration: none; color:rgb(33, 37, 41);"> Dynamic Correlation </a></strong> - Scatter plot I build using JavaScript and D3 library. Play
-                    with it and change parameters on axis, plot will change dynamically.
-
-                </div>
-
-            </div>
-
         </div>
     </div>
 
