--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
 
 
                         <div class="absolutePosition">
-                            Hi, I am Oleg Mironov. My bachelor degree in software development started my career as IT Engineer. I helped financial institutions, law firms, housing agencies and other industries in Houston area. Desire to grow professionally pushed me to learn new
-                            trending skills: coding with Python and JavaScript, data visualization, machine learning, API interactions and so on. Now I am a professional data analyst. Last year I successfully deployed two web sites. People I worked with
-                            see me as detail-oriented, organized and initiative team player who has strong problem-solving skills and ability to work under pressure of any circumstances. I always strive to go extra mile to achieve great results and exceed
-                            company expectations and these characteristics positions me well to be a part of successful team who sets high standards and dares to dream big.
+                            Hi, I am Oleg Mironov. My Bachelor Degree in software development started my career as an IT Engineer. I helped financial institutions, law firms, housing agencies and other industries in Houston area. Desire to grow professionally pushed me to learn
+                            new trending skills: coding with Python and JavaScript, data visualization, machine learning, API interactions and so on. Now I am a professional data analyst. Last year I successfully deployed two web sites. People I worked
+                            with see me as detail-oriented, organized and initiative team player who has strong problem-solving skills and ability to work under pressure of any circumstances. I always strive to go extra mile to achieve great results and
+                            exceed company expectations and these characteristics positions me well to be a part of successful team who sets high standards and dares to dream big.
                         </div>
 
 
