added folder structure and adjusted links

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" type="text/css" href="myCSS.css">
+    <link rel="stylesheet" type="text/css" href="static/css/myCSS.css">
+    <link rel="shortcut icon" href="static/img/favicon.ico" type="image/x-icon">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -19,7 +20,7 @@
 
 
 
-        <img src="IMG_3560_mid.gif" alt="my photo" style="height: 100%;">
+        <img src="static/img/IMG_3560_mid.gif" alt="my photo" style="height: 100%;">
 
         <div class="floatingTable">
             <div class="row">
@@ -52,7 +53,7 @@
 
 
                                 <div class="col-xs-12 col-sm-12 col-md-4">
-                                    <a href="OlegMironov_Resume.pdf" style="text-decoration:none" download target="_blank">
+                                    <a href="static/resume/OlegMironov_Resume.pdf" style="text-decoration:none" download target="_blank">
                                         <div class="cellule">
                                             Download my RESUME
                                         </div>
