--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                         <div class="row">
 
                             <div class="col-md-12">
-                                <h3><br>Featured Projects:</h3>
+                                <h3><br>Featured Project:</h3>
                             </div>
 
                         </div>
@@ -89,8 +89,7 @@
                         <div class="row">
                             <div class="col-md-1"></div>
                             <div class="col-md-11">
-                                <strong><a href="https://texas-multi-choropleth.herokuapp.com/" target="_blank" style="text-decoration: none; color:rgb(33, 37, 41);"> Texas Dream </a></strong> - Explore Texas, check out high income areas, low unemployment,
-                                best schools and other factors to select best place to live in this wonderful state.
+                            </br>
                             </div>
 
                         </div>
